
  [ Ansgar Burchardt ]
  * debian/control: Convert Vcs-* fields to Git.

  [ gregor herrmann ]
  * debian/control: update {versioned,alternative} (build) dependencies.

  [ Xavier Guimard ]
  * Imported Upstream version 3.2
  * Update source format to 3.0 (quilt)
  * Bump Standards-Version to 3.9.4
  * Use debhelper 9.20120312
  * Update debian/copyright (years and format)

 -- Xavier Guimard <x.guimard@free.fr>  Fri, 07 Dec 2012 21:25:07 +0100

libfilesys-smbclient-perl (3.1-3) unstable; urgency=low

  * debian/rules: touch Makefile in clean target after unpatching
    Makefile.PL to prevent it from being re-built; allows building twice
    in a row.
  * debian/copyright: point to author-independent URL of the upstream
    source.
  * Refresh debian/rules, no functional changes.
  * debian/control: make build dependency on quilt versioned and add /me to
    Uploaders.

 -- gregor herrmann <gregoa@debian.org>  Wed, 30 Apr 2008 23:39:50 +0200

libfilesys-smbclient-perl (3.1-2) unstable; urgency=low

  [ gregor herrmann ]
  * debian/control: Added: Vcs-Svn field (source stanza); Vcs-Browser
    field (source stanza); Homepage field (source stanza). Removed: XS-
    Vcs-Svn fields.
  * debian/rules: delete /usr/share/perl5 only if it exists.

  [ Damyan Ivanov ]
  * debian/watch: use dist-vased URL, better pattern
  * debian/rules:
    + move (still disabled) test suite in build-stamp target
    + use "$@" when touching stamps
    + remove *-stamp files before realclean
    + fix install(-stamp) dependencies
    + remove commented-out dh_* calls; remove unused dh_link and dh_makeshlibs
      calls
    + when installing t/ as examples, keep the directory
  * Move changes to Makefile.PL into 10_Makefile.PL.patch
    + add quilt to build process
  * chmod 0644 smb2www.css (thanks, lintian)
  * Standards-Version: 3.7.3 (no changes)
  * debhelper compatibility level 6
  * add myself to Uploaders

 -- Damyan Ivanov <dmn@debian.org>  Mon, 21 Jan 2008 14:16:39 +0200
