@@ -20,6 +20,7 @@ libfilesys-smbclient-perl (3.2-1) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.9.4
   * Use debhelper 9.20120312
   * Update debian/copyright (years and format)
+  * Update debian/rules to use "dh %"
 
  -- Xavier Guimard <x.guimard@free.fr>  Fri, 07 Dec 2012 21:25:07 +0100
 
